fix: landing on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,7 +49,7 @@ code {
 a {
   text-decoration: inherit;
   color: inherit;
-  cursor: auto;
+  cursor: pointer;
 }
 
 a:visited {
